# majordome

./: .gitignore  Cargo.toml  LICENSE  README.md
majordome/: Cargo.toml
majordome-cache/: Cargo.toml  README.md
majordome-cache/src/: appmod.rs  expiry.rs  getter.rs  lib.rs
majordome-derive/: Cargo.toml  README.md
majordome-derive/src/: lib.rs  majordome_errors.rs  majordome_scylla.rs
majordome-scylla/: Cargo.toml
majordome-scylla/src/: __private.rs  err.rs  lib.rs  traits.rs
majordome-scylla/tests/: test_macros.rs
majordome/src/: app.rs  error.rs  lib.rs  signal.rs
majordome/src/compat/: axum.rs  mod.rs
majordome/src/error/: axum.rs  mod.rs
majordome/src/module/: builder.rs  config.rs  mod.rs  store.rs
