[package]
name = "majordome-cache"
version = "1.0.2"
edition = "2021"
description = "A cache module for Majordome. Currently based on Moka."
license = "MIT"

[dependencies]
majordome = "1"
async-trait = "0.1.80"
serde = { version = "1.0", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }