[package]
name = "majordome-cache"
version = "1.0.3"
edition = "2021"
description = "A cache module for Majordome. Currently based on Moka."
license = "MIT"
repository = "https://github.com/merlleu/majordome"

[dependencies]
majordome = "1"
async-trait = "0.1.80"
serde = { version = "1.0", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
rand = "0.9.2"
