[package]
name = "majordome-scylla"
version = "1.1.3"
edition = "2021"
description = "ScyllaDB ORM for the majordome crate"
license = "MIT"
repository = "https://github.com/merlleu/majordome"

[dependencies]
async-trait = "0.1.81"
majordome = "1"
scylla = "0.13.1"
dashmap = "4.0.0"
tokio = { version = "1.38.0", features = ["sync"] }
majordome-derive = { path = "../majordome-derive", version = "1" }
smallvec = "1.13.2"