[package]
name = "majordome"
version = "1.0.17"
edition = "2021"
description = "A modular state manager for Rust API and Services."
license = "MIT"
repository = "https://github.com/merlleu/majordome"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.80"
tracing = "0.1.40"
axum = { version = "0.7", features = ["macros"], optional = true }
majordome-derive = { path = "../majordome-derive", version = "1" }
schemars = { version = "0.8.21", features = ["uuid1"] }

[features]
default = []
